--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,18 @@ services:
     networks:
       - test-network
 
+  app:
+    build: .
+    container_name: app
+    restart: unless-stopped
+    ports:
+    - 80:5002
+    volumes:
+      - ./templates/:/app/templates
+    networks:
+      - test-network
+
+
 networks:
   test-network:
     driver: bridge
